// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a tooltip at the bottom 1`] = `
<div>
  <div
    class="__react_component_tooltip test place-bottom type-dark allow_click"
    data-id="tooltip"
    id="test"
  >
    <style>
      
  	.test {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.test.place-top {
        margin-top: -10px;
    }
    .test.place-top::before {
        border-top: 8px solid transparent;
    }
    .test.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .test.place-bottom {
        margin-top: 10px;
    }
    .test.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .test.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .test.place-left {
        margin-left: -10px;
    }
    .test.place-left::before {
        border-left: 8px solid transparent;
    }
    .test.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .test.place-right {
        margin-left: 10px;
    }
    .test.place-right::before {
        border-right: 8px solid transparent;
    }
    .test.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
    </style>
  </div>
</div>
`;

exports[`renders a tooltip at the left 1`] = `
<div>
  <div
    class="__react_component_tooltip test place-left type-dark allow_click"
    data-id="tooltip"
    id="test"
  >
    <style>
      
  	.test {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.test.place-top {
        margin-top: -10px;
    }
    .test.place-top::before {
        border-top: 8px solid transparent;
    }
    .test.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .test.place-bottom {
        margin-top: 10px;
    }
    .test.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .test.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .test.place-left {
        margin-left: -10px;
    }
    .test.place-left::before {
        border-left: 8px solid transparent;
    }
    .test.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .test.place-right {
        margin-left: 10px;
    }
    .test.place-right::before {
        border-right: 8px solid transparent;
    }
    .test.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
    </style>
  </div>
</div>
`;

exports[`renders a tooltip at the right 1`] = `
<div>
  <div
    class="__react_component_tooltip test place-right type-dark allow_click"
    data-id="tooltip"
    id="test"
  >
    <style>
      
  	.test {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.test.place-top {
        margin-top: -10px;
    }
    .test.place-top::before {
        border-top: 8px solid transparent;
    }
    .test.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .test.place-bottom {
        margin-top: 10px;
    }
    .test.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .test.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .test.place-left {
        margin-left: -10px;
    }
    .test.place-left::before {
        border-left: 8px solid transparent;
    }
    .test.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .test.place-right {
        margin-left: 10px;
    }
    .test.place-right::before {
        border-right: 8px solid transparent;
    }
    .test.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
    </style>
  </div>
</div>
`;

exports[`renders a tooltip at the top (default) 1`] = `
<div>
  <div
    class="__react_component_tooltip test place-top type-dark allow_click"
    data-id="tooltip"
    id="test"
  >
    <style>
      
  	.test {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.test.place-top {
        margin-top: -10px;
    }
    .test.place-top::before {
        border-top: 8px solid transparent;
    }
    .test.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .test.place-bottom {
        margin-top: 10px;
    }
    .test.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .test.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .test.place-left {
        margin-left: -10px;
    }
    .test.place-left::before {
        border-left: 8px solid transparent;
    }
    .test.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .test.place-right {
        margin-left: 10px;
    }
    .test.place-right::before {
        border-right: 8px solid transparent;
    }
    .test.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
    </style>
  </div>
</div>
`;
